# DataMountain

./: .env.example  .gitignore  README.md  client_secrets.txt  create_strava_app.ipynb  pyproject.toml  run.sh  test.ipynb
src/: main.py
src/app/: callbacks.py  layout.py
src/constants/: colors.py
src/pages/activities/: callbacks.py  layout.py  navbar.py
src/pages/activity/: callbacks.py  layout.py  navbar.py
src/pages/activity/tabs/graphs/: callbacks.py  layout.py
src/pages/activity/tabs/overview/: callbacks.py  layout.py
src/pages/activity/tabs/statistics/: callbacks.py  layout.py
src/pages/athlete/: callbacks.py  layout.py
src/pages/calendar/: callbacks.py  layout.py  navbar.py
src/pages/home/: callbacks.py  layout.py  navbar.py
src/pages/map/: callbacks.py  layout.py  navbar.py
src/strava/: client.py
src/templates/components/: selects.py
src/utils/: dataframes.py  dates.py  maps.py
